syntax = "proto3";

package patient;

service PatientService {
  rpc CreatePatient(CreatePatientRequest) returns (PatientResponse);
  rpc GetPatientByID(GetPatientRequest) returns (PatientResponse);
  rpc UpdatePatient(UpdatePatientRequest) returns (PatientResponse);
  rpc DeletePatient(DeletePatientRequest) returns (Empty);
}

message CreatePatientRequest {
  string name = 1;
  string phone_number = 2;
  int32 doctor_id = 3;
}

message GetPatientRequest {
  int32 id = 1;
}

message UpdatePatientRequest {
  int32 id = 1;
  string name = 2;
  string phone_number = 3;
  int32 doctor_id = 4;
}

message DeletePatientRequest {
  int32 id = 1;
}

message PatientResponse {
  int32 id = 1;
  string name = 2;
  string phone_number = 3;
  int32 doctor_id = 4;
}

message Empty {}
